--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<manifest package="com.topjohnwu.magisk"
+          xmlns:android="http://schemas.android.com/apk/res/android"
 
-    package="com.topjohnwu.magisk">
+          xmlns:tools="http://schemas.android.com/tools">
 
     <uses-sdk tools:overrideLibrary="com.kcoppock.broadcatsttilesupport" />
 
@@ -66,9 +66,9 @@
         </activity>
         <activity
             android:name=".SplashActivity"
-            android:theme="@style/SplashTheme"
             android:configChanges="orientation|screenSize"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -103,6 +103,9 @@
         </provider>
         <activity
             android:name=".AboutActivity"
+            android:theme="@style/AppTheme.Transparent"/>
+        <activity
+            android:name=".SettingsActivity"
             android:theme="@style/AppTheme.Transparent" />
 
         <provider
