--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.4.0'
     compile 'com.github.michalis-vitos:aFileChooser:master'
     compile 'com.google.code.gson:gson:2.7'
+    compile 'com.simplecityapps:recyclerview-fastscroll:1.0.11'
 
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
 }
